@@ -13,9 +13,6 @@ sig
     InfixName of string * int |
     InfixlName of string * int |
     InfixrName of string * int |
-    Infix of int |    (*obsolete*)
-    Infixl of int |   (*obsolete*)
-    Infixr of int |   (*obsolete*)
     Binder of string * int * int |
     Structure
   val binder_name: string -> string
@@ -27,9 +24,6 @@ sig
   val literal: string -> mixfix
   val no_syn: 'a * 'b -> 'a * 'b * mixfix
   val pretty_mixfix: mixfix -> Pretty.T
-  val type_name: mixfix -> string -> string
-  val const_name: mixfix -> string -> string
-  val const_mixfix: string -> mixfix -> string * mixfix
   val mixfix_args: mixfix -> int
   val mixfixT: mixfix -> typ
 end;
@@ -54,9 +48,6 @@ datatype mixfix =
   InfixName of string * int |
   InfixlName of string * int |
   InfixrName of string * int |
-  Infix of int |      (*obsolete*)
-  Infixl of int |     (*obsolete*)
-  Infixr of int |     (*obsolete*)
   Binder of string * int * int |
   Structure;
 
@@ -84,9 +75,6 @@ fun pretty_mixfix NoSyn = Pretty.str ""
   | pretty_mixfix (InfixName (s, p)) = parens (Pretty.breaks [keyword "infix", quoted s, int p])
   | pretty_mixfix (InfixlName (s, p)) = parens (Pretty.breaks [keyword "infixl", quoted s, int p])
   | pretty_mixfix (InfixrName (s, p)) = parens (Pretty.breaks [keyword "infixl", quoted s, int p])
-  | pretty_mixfix (Infix p) = parens (Pretty.breaks [keyword "infix", int p])
-  | pretty_mixfix (Infixl p) = parens (Pretty.breaks [keyword "infixl", int p])
-  | pretty_mixfix (Infixr p) = parens (Pretty.breaks [keyword "infixr", int p])
   | pretty_mixfix (Binder (s, p1, p2)) =
       parens (Pretty.breaks [keyword "binder", quoted s, brackets [int p1], int p2])
   | pretty_mixfix Structure = parens [keyword "structure"];
@@ -96,47 +84,12 @@ end;
 
 (* syntax specifications *)
 
-fun strip ("'" :: c :: cs) = c :: strip cs
-  | strip ["'"] = []
-  | strip (c :: cs) = c :: strip cs
-  | strip [] = [];
-
-val strip_esc = implode o strip o Symbol.explode;
-
-fun deprecated c = (legacy_feature ("Unnamed infix operator " ^ quote c); c);
-
-fun type_name (InfixName _) = I
-  | type_name (InfixlName _) = I
-  | type_name (InfixrName _) = I
-  | type_name (Infix _) = deprecated o strip_esc
-  | type_name (Infixl _) = deprecated o strip_esc
-  | type_name (Infixr _) = deprecated o strip_esc
-  | type_name _ = I;
-
-fun const_name (InfixName _) = I
-  | const_name (InfixlName _) = I
-  | const_name (InfixrName _) = I
-  | const_name (Infix _) = prefix "op " o deprecated o strip_esc
-  | const_name (Infixl _) = prefix "op " o deprecated o strip_esc
-  | const_name (Infixr _) = prefix "op " o deprecated o strip_esc
-  | const_name _ = I;
-
-fun fix_mixfix c (Infix p) = InfixName (c, p)
-  | fix_mixfix c (Infixl p) = InfixlName (c, p)
-  | fix_mixfix c (Infixr p) = InfixrName (c, p)
-  | fix_mixfix _ mx = mx;
-
-fun const_mixfix c mx = (const_name mx c, fix_mixfix c mx);
-
 fun mixfix_args NoSyn = 0
   | mixfix_args (Mixfix (sy, _, _)) = SynExt.mfix_args sy
   | mixfix_args (Delimfix sy) = SynExt.mfix_args sy
   | mixfix_args (InfixName (sy, _)) = 2 + SynExt.mfix_args sy
   | mixfix_args (InfixlName (sy, _)) = 2 + SynExt.mfix_args sy
   | mixfix_args (InfixrName (sy, _)) = 2 + SynExt.mfix_args sy
-  | mixfix_args (Infix _) = 2
-  | mixfix_args (Infixl _) = 2
-  | mixfix_args (Infixr _) = 2
   | mixfix_args (Binder _) = 1
   | mixfix_args Structure = 0;
 
@@ -148,27 +101,19 @@ fun mixfixT (Binder _) = (dummyT --> dummyT) --> dummyT
 
 fun syn_ext_types type_decls =
   let
-    fun name_of (t, _, mx) = type_name mx t;
-
     fun mk_infix sy t p1 p2 p3 =
       SynExt.Mfix ("(_ " ^ sy ^ "/ _)",
         [SynExt.typeT, SynExt.typeT] ---> SynExt.typeT, t, [p1, p2], p3);
 
-    fun mfix_of decl =
-      let val t = name_of decl in
-        (case decl of
-          (_, _, NoSyn) => NONE
-        | (_, 2, InfixName (sy, p)) => SOME (mk_infix sy t (p + 1) (p + 1) p)
-        | (_, 2, InfixlName (sy, p)) => SOME (mk_infix sy t p (p + 1) p)
-        | (_, 2, InfixrName (sy, p)) => SOME (mk_infix sy t (p + 1) p p)
-        | (sy, 2, Infix p) => SOME (mk_infix sy t (p + 1) (p + 1) p)
-        | (sy, 2, Infixl p) => SOME (mk_infix sy t p (p + 1) p)
-        | (sy, 2, Infixr p) => SOME (mk_infix sy t (p + 1) p p)
-        | _ => error ("Bad mixfix declaration for type: " ^ quote t))
-      end;
+    fun mfix_of (_, _, NoSyn) = NONE
+      | mfix_of (t, 2, InfixName (sy, p)) = SOME (mk_infix sy t (p + 1) (p + 1) p)
+      | mfix_of (t, 2, InfixlName (sy, p)) = SOME (mk_infix sy t p (p + 1) p)
+      | mfix_of (t, 2, InfixrName (sy, p)) = SOME (mk_infix sy t (p + 1) p p)
+      | mfix_of (t, _, _) =
+          error ("Bad mixfix declaration for type: " ^ quote t);  (* FIXME printable!? *)
 
     val mfix = map_filter mfix_of type_decls;
-    val xconsts = map name_of type_decls;
+    val xconsts = map #1 type_decls;
   in SynExt.syn_ext mfix xconsts ([], [], [], []) [] ([], []) end;
 
 
@@ -179,8 +124,6 @@ val binder_name = suffix "_binder";
 
 fun syn_ext_consts is_logtype const_decls =
   let
-    fun name_of (c, _, mx) = const_name mx c;
-
     fun mk_infix sy ty c p1 p2 p3 =
       [SynExt.Mfix ("op " ^ sy, ty, c, [], SynExt.max_pri),
        SynExt.Mfix ("(_ " ^ sy ^ "/ _)", ty, c, [p1, p2], p3)];
@@ -189,33 +132,27 @@ fun syn_ext_consts is_logtype const_decls =
           [Type ("idts", []), ty2] ---> ty3
       | binder_typ c _ = error ("Bad type of binder: " ^ quote c);
 
-    fun mfix_of decl =
-      let val c = name_of decl in
-        (case decl of
-          (_, _, NoSyn) => []
-        | (_, ty, Mixfix (sy, ps, p)) => [SynExt.Mfix (sy, ty, c, ps, p)]
-        | (_, ty, Delimfix sy) => [SynExt.Mfix (sy, ty, c, [], SynExt.max_pri)]
-        | (_, ty, InfixName (sy, p)) => mk_infix sy ty c (p + 1) (p + 1) p
-        | (_, ty, InfixlName (sy, p)) => mk_infix sy ty c p (p + 1) p
-        | (_, ty, InfixrName (sy, p)) => mk_infix sy ty c (p + 1) p p
-        | (sy, ty, Infix p) => mk_infix sy ty c (p + 1) (p + 1) p
-        | (sy, ty, Infixl p) => mk_infix sy ty c p (p + 1) p
-        | (sy, ty, Infixr p) => mk_infix sy ty c (p + 1) p p
-        | (_, ty, Binder (sy, p, q)) =>
-            [SynExt.Mfix ("(3" ^ sy ^ "_./ _)", binder_typ c ty, (binder_name c), [0, p], q)]
-        | _ => error ("Bad mixfix declaration for const: " ^ quote c))
-    end;
+    fun mfix_of (_, _, NoSyn) = []
+      | mfix_of (c, ty, Mixfix (sy, ps, p)) = [SynExt.Mfix (sy, ty, c, ps, p)]
+      | mfix_of (c, ty, Delimfix sy) = [SynExt.Mfix (sy, ty, c, [], SynExt.max_pri)]
+      | mfix_of (c, ty, InfixName (sy, p)) = mk_infix sy ty c (p + 1) (p + 1) p
+      | mfix_of (c, ty, InfixlName (sy, p)) = mk_infix sy ty c p (p + 1) p
+      | mfix_of (c, ty, InfixrName (sy, p)) = mk_infix sy ty c (p + 1) p p
+      | mfix_of (c, ty, Binder (sy, p, q)) =
+          [SynExt.Mfix ("(3" ^ sy ^ "_./ _)", binder_typ c ty, (binder_name c), [0, p], q)]
+      | mfix_of (c, _, _) = error ("Bad mixfix declaration for const: " ^ quote c);
 
     fun binder (c, _, Binder _) = SOME (binder_name c, c)
       | binder _ = NONE;
 
     val mfix = maps mfix_of const_decls;
-    val xconsts = map name_of const_decls;
+    val xconsts = map #1 const_decls;
     val binders = map_filter binder const_decls;
-    val binder_trs = binders |> map (SynExt.stamp_trfun binder_stamp o
-        apsnd K o SynTrans.mk_binder_tr);
-    val binder_trs' = binders |> map (SynExt.stamp_trfun binder_stamp o
-        apsnd (K o SynTrans.non_typed_tr') o SynTrans.mk_binder_tr' o swap);
+    val binder_trs = binders
+      |> map (SynExt.stamp_trfun binder_stamp o apsnd K o SynTrans.mk_binder_tr);
+    val binder_trs' = binders
+      |> map (SynExt.stamp_trfun binder_stamp o
+          apsnd (K o SynTrans.non_typed_tr') o SynTrans.mk_binder_tr' o swap);
   in
     SynExt.syn_ext' true is_logtype
       mfix xconsts ([], binder_trs, binder_trs', []) [] ([], [])
